# TiOgmaNeo

./: CONTRIBUTING.md  MANIFEST.in  README.md  pyproject.toml
tiogmaneo/: __init__.py  decoder.py  encoder.py  helpers.py  hierarchy.py
