[build-system]
requires = [ "setuptools", "wheel" ]

[project]
name = "tiogmaneo"
version = "0.1.0"
description = "Taichi implementation of Sparse Predictive Hierarchies"
readme = "README.md"
authors = [{ name = "Eric Laukien", email = "eric@ogmacorp.com" }]
license = { file = "LICENSE.md" }
classifiers = [
    "License :: Free for non-commercial use",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["sph", "ai", "ml"]
dependencies = [
    "taichi"
]
requires-python = ">=3.9"

[project.urls]
Homepage = "https://github.com/ogmacorp/TiOgmaNeo"
